# back2task

./: .env.local  .gitignore  README.md  __init__.py  conftest.py  demo_complete.py  error.txt  pyproject.toml  quick-start.sh  quick_test.py  requirements.txt  start.bat  start.sh  start_llm.bat  start_llm.sh  stop.sh  test_active_window_direct.py  test_integration.py  test_notifications_direct.py  test_watchers_direct.py
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/services/: __init__.py  llm.py
config/: tasks.yaml
scripts/: lms_start_gemma.bat  lms_start_gemma.sh  lms_stop_gemma.bat  lms_stop_gemma.sh  setup_llm.sh  start.bat  start.py  start.sh  start_api.ps1  start_demo.py  start_pump.ps1  stop.bat  stop.py  stop.sh  utils.py
scripts/boot/: __init__.py  start.py  stop.py
src/api/: main.py
src/api/services/: llm.py
src/model/: models.py
src/tests/: conftest.py  test_integration.py  test_notifications.py
src/ui/: __init__.py  notifications.py
src/watchers/: __init__.py  active_window.py  idle.py  logger.py  pump.py  screen_capture.py
tests/: conftest.py  test_notifications.py
tests/api/: test_llm_service.py  test_session_engine.py
tests/ui/: test_notifications.py
tests/watchers/: test_active_window.py  test_active_window_simple.py
ui/: notifications.py
watchers/: active_window.py  idle.py  pump.py  screen_capture.py  screen_ocr.py  screen_ocr.py.bak  webcam_phone.py  webcam_phone.py.bak
