[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "back2task"
version = "0.1.0"
description = "Local task focus monitoring with LLM-based nudging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
    "pywin32>=306",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "pytesseract>=0.3.10",
    "mediapipe>=0.10.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "winrt>=1.0.21033.1",
    "mss>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
# Look for tests in the repository root.  The previous configuration pointed to
# a non-existent ``tests`` directory which prevented ``pytest`` from adding the
# project to ``sys.path`` during test collection, leading to import errors.
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88