[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "back2task"
version = "0.1.0"
description = "Local task focus monitoring with LLM-based nudging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
    "pywin32>=306",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "pytesseract>=0.3.10",
    "mediapipe>=0.10.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "winrt>=1.0.21033.1",
    "mss>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "ruff>=0.6.2",
    "mypy>=1.11.1",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pyright>=1.1.403",
]

[tool.pytest.ini_options]
# Limit test discovery to the dedicated tests directory.
testpaths = ["tests"]
# Look for tests in the repository root.  The previous configuration pointed to
# a non-existent ``tests`` directory which prevented ``pytest`` from adding the
# project to ``sys.path`` during test collection, leading to import errors.
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Limit linting to errors and undefined names to keep analysis focused.
select = ["E", "F"]
ignore = [
    "D203",
    "D213",
    "COM812",
    "D107", # docstring必須化
    "D400", # docstring の一行目にピリオド必須化
    "D415", # ピリオド必須
    "RUF003", # 全角記号不可
    "RUF002", # 全角カッコ不可
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]
"test_integration.py" = ["D100"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pyright]
pythonVersion = "3.11"
reportMissingModuleSource = "none"
